--- a/lee1.html
+++ b/lee1.html
@@ -36,7 +36,7 @@
 
         <br>
         <footer>
-            <p>Footer</p>
+            <p>Made by Lee, Douglas, Lex and Nathan</p>
         </footer>
     </body>
 </html>
