--- a/douglas1.html
+++ b/douglas1.html
@@ -46,9 +46,8 @@
             that an
             individual may have not had isolated. (1) “You can use social media to research, learn, and share best
             practices,
-            lessons learned, and innovative solutions from other communities or experts.” (“How can social media enhance
-            community
-            development and social capital?”) This will often build stronger communities with individual or shared
+            lessons learned, and innovative solutions from other communities or experts.” 
+            This will often build stronger communities with individual or shared
             perspectives;
             this can be weaponised in hopes of creating a brighter future, with more inspiration and ease of access to
             knowledge.
@@ -71,8 +70,7 @@
             As mentioned before, social media is a fantastic way of exposing yourself to the unknown, but you’d be none
             the wiser to undergo overexposure as: (2) “Many studies reveal that being online for a long period of time
             in an empty space can create a feeling of loneliness since the person’s inner mind gradually develop
-            solitude by over exposure to others happy moments.” (“Does Social Media Bring People Together Or Isolate
-            Them?”). While developed countries and akin may be fortunate enough to have access to such a powerful tool,
+            solitude by over exposure to others happy moments.” While developed countries and akin may be fortunate enough to have access to such a powerful tool,
             said tool can also result in great hardships if said person is not careful. Therefore, it is recommended to
             limit yourself to the amount of content you consume on social media in hopes of preventing an event like
             this.
@@ -93,7 +91,7 @@
     </div>
     <br>
     <footer>
-        <p>Footer</p>
+        <p>Made by Lee Elder, Douglas Chikaya, Lex Atkinson and Nathan Anderson</p>
     </footer>
 </body>
 
