--- a/douglas2.html
+++ b/douglas2.html
@@ -36,7 +36,7 @@
             especially if you are a business. (3) “Social media platforms have varying advantages, but for any business,
             it is essential to use them for digital marketing, customer support, gathering data, and more. Additionally,
             it is a simple and low-risk way for your company to reach new audiences who may be interested in your brand
-            and services.” (“5 Social Media Opportunities For Your Local Business”).
+            and services.”
 
         </p>
     </div>
@@ -47,8 +47,7 @@
             world. There is no other place that spreads more information rapidly than social media, thus making it a top
             source of information. (4) “Different media inform us about what is happening in the country and in the
             world. This information helps us to be in touch with reality and to understand what is happening around us
-            and, of course, to understand what is happening to the other.” (“The Role and Importance of Media In Our
-            Daily Life”) Despite it making people aware of what is currently happening in their frame of reference, it
+            and, of course, to understand what is happening to the other.” Despite it making people aware of what is currently happening in their frame of reference, it
             allows for people to dig deeper into situations and do extensive research for them. While this may not seem
             too important, it can help to paint the bigger picture of certain events or highlight potential oversights
             others may have had.
@@ -67,7 +66,7 @@
     </div>
     <br>
     <footer>
-        <p>Made by Lee, Douglas, Lex and Nathan</p>
+        <p>Made by Lee Elder, Douglas Chikaya, Lex Atkinson and Nathan Anderson</p>
     </footer>
 </body>
 
