--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
         
         <div style="text-align:center">
             <div class="pagebox" id="leftpage">
-                <a href="publicsafety1.html" id="link1"></a>
+                <a href="lee1.html" id="link1"></a>
                 <h2>Public Safety</h2>
                 <h3>Short paragraph about page, possible image and whatnot</h3>
             </div>
 
             <div class="pagebox">
-                <a href="index.html" id="link2"></a>
+                <a href="lee2.html" id="link2"></a>
                 <h2>Lee page 2</h2>
                 <h3>Short paragraph about page, possible image and whatnot</h3>
             </div>
@@ -61,20 +61,20 @@
                 <h3>Short paragraph about page, possible image and whatnot</h3>
             </div>
             <div class="pagebox" id="page7">
-                <a href="index.html" id="link7"></a>
-                <h2>Page 7</h2>
+                <a href="douglas1.html" id="link7"></a>
+                <h2>Douglas page 1</h2>
                 <h3>Short paragraph about page, possible image and whatnot</h3>
             </div>
 
             <div class="pagebox" id="page8">
-                <a href="index.html" id="link8"></a>
-                <h2>Page 8</h2>
+                <a href="douglas2.html" id="link8"></a>
+                <h2>Douglas page 2</h2>
                 <h3>Short paragraph about page, possible image and whatnot</h3>
             </div>
         </div>
         <br>
         <footer>
-            <p>Footer</p>
+            <p>Made by Lee Elder, Douglas Chikaya, Lex Atkinson and Nathan Anderson</p>
         </footer>
     </body>
 </html>
