--- a/lex1.html
+++ b/lex1.html
@@ -58,7 +58,7 @@
         </div>
         <br>
         <footer>
-            <p>Footer</p>
+            <p>Made by Lee Elder, Douglas Chikaya, Lex Atkinson and Nathan Anderson</p>
         </footer>
     </body>
 </html>
