--- a/nat1.html
+++ b/nat1.html
@@ -77,7 +77,7 @@
         </div>
         
         <footer>
-            <p>Footer</p>
+            <p>Made by Lee Elder, Douglas Chikaya, Lex Atkinson and Nathan Anderson</p>
         </footer>
     </body>
 </html>
