--- a/nat2.html
+++ b/nat2.html
@@ -47,7 +47,7 @@
         </div>
 
         <footer>
-            <p>Footer</p>
+            <p>Made by Lee Elder, Douglas Chikaya, Lex Atkinson and Nathan Anderson</p>
         </footer>
     </body>
 </html>
