--- a/lee2.html
+++ b/lee2.html
@@ -31,7 +31,7 @@
         </div>
         <br>
         <footer>
-            <p>Made by Lee, Douglas, Lex and Nathan</p>
+            <p>Made by Lee Elder, Douglas Chikaya, Lex Atkinson and Nathan Anderson</p>
         </footer>
     </body>
 </html>
