--- a/teamwork.html
+++ b/teamwork.html
@@ -19,7 +19,7 @@
         </div>
         <br>
         <footer>
-            <p>Footer</p>
+            <p>Made by Lee, Douglas, Lex and Nathan</p>
         </footer>
     </body>
 </html>
