--- a/douglas2.html
+++ b/douglas2.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="stickymain">
-        <h1 class="title">Title</h1>
+        <h1 class="title">Social Media 2</h1>
         <nav>
             <div class="topnav" id="navb">
                 <a href="index.html">Home</a>
