--- a/lee1.html
+++ b/lee1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Public Safety: Road safety</title>
+        <title>Public Safety 1</title>
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
     </head>
@@ -19,7 +19,7 @@
 
         <div class="overview">
             <h2>Intro</h2>
-            <h3>Public safety is a vital aspect of a successful community. The peace of mind brought to civilians through effective public safety measures is invaluable, and these measures are always evolving with the help of computer science. Making sure that civilians are not negatively affected by aspects of modern society that are out of their control is key to a thriving community and infrastructure to ensure this is constantly improving with the forever-expanding possibilities that technology holds.  Technology is virtually everywhere in modern security, with most cities almost fully covered by CCTV surveillance, and all digital actions easily tracked down. This is vital for an effective security network for communities as it ensures that no action can go unseen under the scrutiny of investigators and ensures justice for victims of crime. </h3>
+            <h3>Public safety is a vital aspect of a successful community. The peace of mind brought to civilians through effective public safety measures is invaluable, and these measures are always evolving with the help of computer science. Making sure that civilians are not negatively affected by aspects of modern society that are out of their control is key to a thriving community and infrastructure to ensure this is constantly improving with the forever-expanding possibilities that technology holds. </h3>
         </div>
 
         <div class="leftbox">
