--- a/lee2.html
+++ b/lee2.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="stickymain">
-            <h1 class="title">Public Safety: Law enforcement</h1>
+            <h1 class="title">Public Safety 2</h1>
             <nav>
                 <div class="topnav" id="navb">
                     <a href="index.html">Home</a>
@@ -19,11 +19,11 @@
 
         <div class="overview">
             <h2>Intro</h2>
-            <h3>Public safety is a vital aspect of a successful community. The peace of mind brought to civilians through effective public safety measures is invaluable, and these measures are always evolving with the help of computer science. Making sure that civilians are not negatively affected by aspects of modern society that are out of their control is key to a thriving community and infrastructure to ensure this is constantly improving with the forever-expanding possibilities that technology holds.  Technology is virtually everywhere in modern security, with most cities almost fully covered by CCTV surveillance, and all digital actions easily tracked down. This is vital for an effective security network for communities as it ensures that no action can go unseen under the scrutiny of investigators and ensures justice for victims of crime. </h3>
+            <h3>Technology is virtually everywhere in modern security, with most cities almost fully covered by CCTV surveillance, and all digital actions easily tracked down. This is vital for an effective security network for communities as it ensures that no action can go unseen under the scrutiny of investigators and ensures justice for victims of crime.</h3>
         </div>
 
         <div class="leftbox">
-            <p>Another aspect of public safety that is heavily influenced by computer science is law enforcement and crime. Law enforcement has seen a huge number of technological improvements that have proven very effective in making crime easier to track and easier to prevent. ANPR (Automatic Number Plate Recognition) cameras are a prime example of computing science’s power in law enforcement. These systems are used in some police vehicles, and automatically scan registration plates and check them against large police databases and will return any important information such as if the vehicle is stolen, if the MOT is expired or if the owner has a warrant out for their arrest. This is extremely useful for law enforcement as these checks are fully automated, and if a plate cannot be read, the system will notify the operator of the problem. This reinforces the harmony between humans and machines, as the system does the checks at speeds that are not possible for humans and relays all important information but will also notify human operators if they are needed.</p>
+            <p>Law enforcement has seen a huge number of technological improvements that have proven very effective in making crime easier to track and easier to prevent. ANPR (Automatic Number Plate Recognition) cameras are a prime example of computing science’s power in law enforcement. These systems are used in some police vehicles, and automatically scan registration plates and check them against large police databases and will return any important information such as if the vehicle is stolen, if the MOT is expired or if the owner has a warrant out for their arrest. This is extremely useful for law enforcement as these checks are fully automated, and if a plate cannot be read, the system will notify the operator of the problem. This reinforces the harmony between humans and machines, as the system does the checks at speeds that are not possible for humans and relays all important information but will also notify human operators if they are needed.</p>
         </div>
 
         <div class="rightbox">
