--- a/lex1.html
+++ b/lex1.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="stickymain">
-            <h1 class="title">Title</h1>
+            <h1 class="title">Pollution 1</h1>
             <nav>
                 <div class="topnav" id="navb">
                     <a href="index.html">Home</a>
@@ -22,15 +22,17 @@
             <h3> AI's recent advancements in intelligence and power has really propelled it from a passing thought to a force to be reckoned with, and for good reason; it can do far more than a simple human can and can 
                 think up completely unique solutions to existing problem, which sometimes far surpass anything that has come before. 
             </h3>
-            <h3 id="quote">'Computer modelling, simulation and machine learning have been incorporated by computer scientists in partnership with environmental scientists to employ an array of information technology
-                 tools at their disposal to help fight climate change' (4)</h3>
-            <h3>Repeated simulations over thousands of iterations paired with machine learning allows algorithms to best optimize a solution to a problem, such as creating more efficient insulation in a home during
+        </div>
+        <div class="leftbox">
+            <p id="quote">'Computer modelling, simulation and machine learning have been incorporated by computer scientists in partnership with environmental scientists to employ an array of information technology
+                 tools at their disposal to help fight climate change' (4)</p>
+            <p>Repeated simulations over thousands of iterations paired with machine learning allows algorithms to best optimize a solution to a problem, such as creating more efficient insulation in a home during
                 the colder months, whilst also keeping your home cooler during the summer. This is excellent for communities as it allows for more compact housing, not wasted on heat, and is also excellent for 
                 the environment, as excessive heat is reduced, slowing the rapid effects of global warming. 
-            </h3>
+            </p>
         </div>
         <br>
-        <div class="leftbox">
+        <div class="rightbox">
             <p>. AI can also be incorporated into kitchens, too. Winnow is a great example of this, expanding upon a great innovation that is helpful to a lot of people. By reducing food waste, not only can we 
                 reduce environmental impact from food waste, but we can also increase the longevity of our kitchens and the effectiveness of food. This allows us to feed countless more people in 
                 our communities, as food would become far more available to those less fortunate that need it.</p>
@@ -40,14 +42,14 @@
             </p>
         </div>
         <br>
-        <div class="rightbox">
+        <div class="leftbox">
             <p>Though, computation does not come without its own risks. Even though it has brought many new opportunities and have undeniably made our lives far more comfortable, 
                 it is still a double-edged sword, as it requires many resources to create and maintain, for example, <i>‘data centres and data transmission networks are responsible 
                 for 1% of global energy related to Greenhouse emissions’ (6)</i>, and that’s just data centres and transmission networks, a small part of our current computational 
                 toolbox. There’s also a stigma going around that artificial intelligence may ‘go rogue’ and attempt to kill the entire human species, which brings fear into the 
                 hearts of our communities, dividing them and slowing progress into the field of artificial intelligence. </div>
         <br>
-        <div class="leftbox">
+        <div class="rightbox">
             <p>We need to take steps to make sure that the technology we birthed into this world isn’t the one that will take us out of it. Luckily, humanity thought ahead, and have attempted to minimise the impact of 
                 computation on the environment, so that we can still reap the benefits of this new technology with minimal consequences. Both Artificial Intelligence and Smart technology, whilst great, are only a 
                 few examples of computation used to help the environment, not hinder it.</p>
