--- a/lex2.html
+++ b/lex2.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="stickymain">
-            <h1 class="title">Title</h1>
+            <h1 class="title">Pollution 2</h1>
             <nav>
                 <div class="topnav" id="navb">
                     <a href="index.html">Home</a>
@@ -20,16 +20,19 @@
         <div class="overview">
             <h2>Intro</h2>
             <h3>Pollution has been a problem that has plagued our communities for decades, staining our buildings, heating up the Earth and destroying wildlife. Luckily, we have took steps to mitigating the destructive force 
-                that is Pollution, but it is not enough, only slowing its consequence of making Earth uninhabitable.
+                that is Pollution, but it is not enough, only slowing its consequence of making Earth uninhabitable.</h3>
+        </div>
+        <div class="leftbox">
+            <p>
                 Pollution affects our communities as it makes the air unsafe to breathe in, heats up the Earth to uncomfortable temperatures<i> ('the global average temperature has been rising at a rate of 1.7°C 
                 per century, compared to a long-term decline over the past 7,000 years at a baseline rate of 0.01°C per century’) (1) </i>
                 stains our buildings in pollutants, wears them down and kills of countless wildlife. The sooner we deal with pollution, the better of we will be in the long term, as it is a massive threat to both us and our 
                 ecosystem. This is where Computation can function as a big ally in this fight to stop Pollution, as it can bring new innovations and technology that helps us take steps towards slowing and even stopping 
                 Pollution as a whole.
-            </h3>
+            </p>
         </div>
         <br>
-        <div class="leftbox">
+        <div class="rightbox">
             <p>Smart technology is a notable example of how computation can help drastically with preventing pollution. It acts as a simple yet efficient way of reducing unnecessary waste and is a useful tool to a vast number of 
                 homes, both saving money and energy for thousands of customers around the world.</p>
                 <p id ="quote">'A smart home can reduce a home's environmental impact by increasing energy efficiency, reducing carbon footprint, and saving money for the consumer compared to older, non-smart alternatives, which 
@@ -38,7 +41,7 @@
                     those in need or allowing the consumer to spend money on greener and safer products) This is done by the technology switching off any unused devices or by reducing their power output whenever possible.</p>
         </div>
         <br>
-        <div class="rightbox">
+        <div class="leftbox">
             <p>Not only that, but Smart technology has also been rapidly developing and, as such, entire living environments have become smart in themselves, not just a small appliance here and there. </p>
                 <p id ="quote">‘Smart spaces are physical areas infused with technology, resulting in interactive spaces and connections between people, processes, and services. This allows buildings to function as 
                     efficient and productive spaces for owners and occupants alike, making cities smarter and more sustainable.' (3)</p>
@@ -47,7 +50,7 @@
                     time span, which helps with building up a more prosperous community. </p>
             </div>
         <br>
-        <div class="leftbox">
+        <div class="rightbox">
             <p>Smart technology is also incredibly convenient for their owners. Not everyone has the time to worry about miniscule problems, especially with seemingly endless work they may have to deal with. With the convenience of
                 smart devices, all the work can be done at their fingertips. People are more likely to do something if it's convenient to them, and as such, smart technology allows them to reduce wasted electricity with ease.</p>
                 <p id = "quote"> 'Rather than controlling appliances, thermostats, lighting, and other features using different devices, homeowners can control them all using one device—usually a smartphone or tablet.'(7) </p>
