--- a/nat1.html
+++ b/nat1.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="stickymain">
-            <h1 class="title">Home</h1>
+            <h1 class="title">Jobs 1</h1>
             <nav>
                 <div class="topnav" id="navb">
                     <a href="index.html">Home</a>
