--- a/nat2.html
+++ b/nat2.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="stickymain">
-            <h1 class="title">Home</h1>
+            <h1 class="title">Jobs 2</h1>
             <nav>
                 <div class="topnav" id="navb">
                     <a href="index.html">Home</a>
@@ -20,11 +20,26 @@
         <div class="overview">
             <h2>Intro</h2>
             <h3>
-                A safer and more sustainable city can be created by allowing computer science to innovate the delivery service industry. This could be efficiently executed if technology such as automated driving is fully taken advantage of. Automated delivery services have already proven successful following an experiment conducted by DPD in Milton Keynes in July 2022, “<i>They are a sustainable solution, and we genuinely want to find out if they could help us take vans off the road in future</i>" - Elaine Kerr, DPD UK CEO (4). This form of delivery service minimises journey time, carbon emissions and eliminates the chance of human error occurring. Furthermore, everyday traveling would become significantly safer as all delivery vehicles would be programmed to drive safely and be part of an external database containing location information of all delivery vehicles therefor reducing the chance of collisions which also eliminates the risk of delivery drivers being involved on accident. This will prove to be highly beneficial as according to an investigation done by University Collage London, compared to regular citizens, delivery drivers are significantly more likely to speed (56% against 39%), run a red light (21% to 12%) or use their phone while driving (57% against 21%).(5)
+                A safer and more sustainable city can be created by allowing computer science to innovate the delivery service industry. 
+                This could be efficiently executed if technology such as automated driving is fully taken advantage of.
             </h3>
         </div>
 
         <div class="leftbox">
+            <p>
+            Automated delivery services
+            have already proven successful following an experiment conducted by DPD in Milton Keynes in July 2022,
+             “<i>They are a sustainable solution, and we genuinely want to find out if they could help us take vans off the road in future</i>"
+              - Elaine Kerr, DPD UK CEO (4). This form of delivery service minimises journey time, carbon emissions and eliminates the chance
+               of human error occurring. Furthermore, everyday traveling would become significantly safer as all delivery vehicles would be
+                programmed to drive safely and be part of an external database containing location information of all delivery vehicles 
+                therefor reducing the chance of collisions which also eliminates the risk of delivery drivers being involved on accident. 
+                This will prove to be highly beneficial as according to an investigation done by University Collage London, compared to
+                 regular citizens, delivery drivers are significantly more likely to speed (56% against 39%), run a red light (21% to 12%) 
+                 or use their phone while driving (57% against 21%).(5)</p>
+        </div>
+
+        <div class="rightbox">
                 <p>
 
             With the use of all of this technology, peoples jobs will become less stressful and overwhelming and result in better mental health amongst the city. Unfortunately mental health issues caused by work is rampant with approximately half of the 1.8 million work related illnesses reported between 2021-2022 in the UK are made up of mental heath problems including stress, depression and anxiety.(6) With the use of assistive software and automated machinery in the workplace it is likely that the afore mentioned figures will drop as people will have a smaller workload and more help to get through it. This also results in people having more free time to spend doing what they want to do resulting in further improvements to mental health among the city.
@@ -32,14 +47,14 @@
                 </p>
         </div>
 
-        <div class="rightbox">
+        <div class="leftbox">
                 <p>
                     Despite what many people may think, computers are not going to take over the world. It’s not wrong to say that some peoples’ jobs will be replaced by automated machinery but in most cases this will lead to jobs being completed more efficiently, cheaper product prices (as labour costs will significantly decrease) and better safety as human lives will not be at risk within hazardous workplace environments. Furthermore, the change from people to automated machinery will not happen overnight and is likely to happen across a number of years through a transition period which further reinforces the point that people will not lose their job. From an analysis conducted by U.S. Bureau of Labor Statistics, “<i>the computer and information technology field is expected to grow by 13 percent from 2016-2026 — faster than the average growth rate of all occupations</i>” (7) This proves, the abundance of job opportunities that will open up in the computer science field will expand exponentially. This is down to the fact that if we begin to utilise and rely on computer systems and machines, there will need to be people within every field who are able to repair, debug and update the equipment used. This will make computer science more accessible and attractive to people who may be considering getting into this field but don’t know where to start.
 
                 </p>
         </div>
 
-        <div class="leftbox">
+        <div class="rightbox">
             <p>
                     To conclude, thanks to the job opportunities, improved workplace environments and new technology created by computer science, cities will become safer, more inclusive and far more sustainable. This ultimately leads the UN to achieving goal 11 (make cities and human settlements inclusive, safe, resilient and sustainable).
 
